[tool.poetry]
name = "ustc-yjs-ics"
version = "2.1.4"
maintainers = ["Trim21 <i@trim21.me>"]
description = ''
authors = ['Trim21 <trim21me@gmail.com>']

[tool.poetry.dependencies]
python = "^3.6.1"
# deps
beautifulsoup4 = '==4.9.3'
icalendar = '4.0.7'
yarl = "==1.6.3"
httpx = "==0.16.1"
fastapi = "==0.61.2"
ttlru-dict = "1.0.1"

[tool.poetry.dev-dependencies]
# tests
coverage = { version = "==5.3", extras = ['toml'] }
pytest = "==6.1.2"
# lint
pre-commit = '==2.8.2'
mypy = "==0.790"
flake8 = "==3.8.4"
flake8-comprehensions = "==3.3.0"
flake8-bugbear = "==20.1.4"
flake8-mutable = "1.2.0"
flake8-eradicate = "==1.0.0"
flake8-pep3101 = "1.3.0"
flake8-2020 = "1.6.0"
flake8-pytest-style = "1.3.0"
uvicorn = { version = "==0.13.4", extras = ['watchgodreload'] }

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":',
  'if typing.TYPE_CHECKING:',
  'raise NotImplementedError'
]

[tool.pytest.ini_options]
addopts = '-v --durations=10'
junit_family = 'legacy'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
